<resources>
    <string name="app_name">ColorChange</string>
    <string name="play">PLAY</string>
    <string name="setting">SETTING</string>
    <string name="share">SHARE</string>
    <string name="rate">RATE US</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">World</string>
    <string name="tab_text_2">Speed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="libelle_lvl">Level</string>
    <string name="end_txt">END</string>
    <string name="libelle_best_score">Best score</string>
    <string name="end_next">NEXT</string>
    <string name="libelle_revive">Revive</string>
    <string name="libelle_again">Again</string>
    <string name="libelle_tutoriel_choose">Tap to start</string>
    <string name="title_activity_pub_ad_reward">PubAdReward</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="title_activity_fdfddfdf">fdfddfdf</string>
    <string name="libelle_score">Score</string>
    <string name="tutoriel">Choose the right color</string>
    <string name="question_tutoriel_1">"Do you want "</string>
    <string name="question_tutoriel_2">start the tutoriel ?</string>
    <string name="answer_tuto_1">YES</string>
    <string name="answer_tuto_2">NO</string>
    <string name="answer_tuto_1_1">(Recommanded)</string>
    <string name="choose_color_tuto_1">Choose the</string>
    <string name="choose_color_tuto_2">right color</string>
    <string name="end_tuto_1">Great !</string>
    <string name="end_tuto_2">Are you ready ?</string>
    <string name="end_tuto_3">(Click to start level 1)</string>
    <string name="shop">SHOP</string>
    <string name="libelle__tutoriel_continue">Tap to continue</string>
    <string name="libelle_full_life">Full</string>
    <string name="setting_son">Sound</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_report_bug">Report a bug</string>
    <string name="setting_rate_us">Rate us</string>
    <string name="setting_languages">Languages</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_no">No</string>
    <string name="shop_free">Free</string>
    <string name="get_hearts">Get hearts</string>
    <string name="title_popin">Warning !</string>
    <string name="content_popin">To use application, you need to active in your settings \'Automatic date and time\'.</string>
    <string name="btn_popin">OK, I DID</string>
    <string name="title_popin_no_life">You are 0</string>
    <string name="content_popin_no_life">Wait to get new lifes or go on shop to buy.</string>
    <string name="btn1_popin_no_life">SHOP</string>
    <string name="btn2_popin_no_life">OK</string>
    <string name="setting_langue1">EN</string>
    <string name="cant_get_prices">NAN</string>
    <string name="interstitial_unit_id">ca-app-pub-9468199307439621/3533014850</string>
    <string name="app_ad_it">ca-app-pub-9468199307439621~5580717404</string>
</resources>
