<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_2"
    tools:context="com.softcaze.nicolas.colorchange.Activity.ListLevelActivity">

    <RelativeLayout
        android:id="@+id/relative_first"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timeLife"
            android:background="@color/grey_claire"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:textSize="20sp"
            android:layout_marginLeft="-20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="6dp"
            android:layout_alignBottom="@id/heart"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/heart"
            android:text=""/>
        <ImageView
            android:id="@+id/heart"
            android:src="@drawable/heart"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/nbrLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/heart"
            android:layout_alignRight="@id/heart"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:text="10"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_second"
        android:layout_width="match_parent"
        android:layout_below="@id/relative_first"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/left_arrow"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/left_arrow"/>

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/right_arrow"/>

        <RelativeLayout
            android:id="@+id/container_monde_1"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/txt_monde_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Monde 1"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:textSize="22dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/nbr_star"
                android:layout_below="@+id/txt_monde_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23"
                android:textColor="@color/white"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="24dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_monde_1"
                android:src="@drawable/star"
                android:layout_toRightOf="@+id/nbr_star"/>

            <ImageView
                android:id="@+id/img_monde"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/golf"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_play"
        android:layout_width="match_parent"
        android:layout_below="@+id/relative_second"
        android:background="@color/red"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:layout_height="match_parent">

        <ListView
            android:divider="@null"
            android:id="@+id/list_view_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popinTime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/title_popin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_popin"
                android:textColor="@color/grey_2"
                android:textStyle="bold"
                android:textSize="24sp"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/content_popin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:layout_below="@id/title_popin"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="18dp"
                android:text="@string/content_popin"/>
            <TextView
                android:id="@+id/btn_popin"
                android:layout_below="@id/content_popin"
                android:layout_alignParentRight="true"
                android:text="@string/btn_popin"
                android:textSize="18sp"
                android:padding="20dp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popinNoLife"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/title_popin_no_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_popin_no_life"
                android:textColor="@color/grey_2"
                android:textStyle="bold"
                android:textSize="24sp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"
                android:paddingTop="20dp"
                android:layout_toRightOf="@id/title_popin_no_life"/>

            <TextView
                android:id="@+id/content_popin_no_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:layout_below="@id/title_popin_no_life"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="18dp"
                android:text="@string/content_popin_no_life"/>
            <TextView
                android:id="@+id/btn2_popin_no_life"
                android:layout_below="@id/content_popin_no_life"
                android:layout_alignParentRight="true"
                android:text="@string/btn2_popin_no_life"
                android:textSize="18sp"
                android:padding="20dp"
                android:textColor="@color/blue_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/btn1_popin_no_life"
                android:layout_below="@id/content_popin_no_life"
                android:layout_toLeftOf="@id/btn2_popin_no_life"
                android:text="@string/btn1_popin_no_life"
                android:textSize="18sp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/blue_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="24dp"
                android:layout_toLeftOf="@id/btn1_popin_no_life"
                android:layout_below="@id/content_popin_no_life"
                android:src="@drawable/shopping_cart_blue"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
